--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "flickity": "~1.1.1",
     "jquery": "~2.1.4",
     "jquery-infinite-scroll": "infinite-scroll#~2.1.0",
+    "jquery.scrollTo": "~2.1.2",
     "js-spatial-navigation": "https://github.com/luke-chang/js-spatial-navigation.git#adffe9de1b0162b84dba916df790b507c4b6c858",
     "masonry": "~3.3.2",
     "pleasejs": "~0.4.2"
